--- a/website.css
+++ b/website.css
@@ -32,6 +32,7 @@ body{
     font-size: 30px;
     font-weight: bold;
     color: white;
+    cursor: pointer;
     
 }
 
@@ -68,10 +69,39 @@ body{
 }
 
 .switch{
-    margin-top:200px;
-    background-color: aqua;
-    width: 200px;
+    margin-top:210px;
+    width: 17%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.learn{
+    width: 45%;
+    height: 40px;
+    font-size: 1.1vw;
+    border-color: white;
+    border-style: solid;
+    background-color: transparent;
+    color: white;
+    font-weight: 700;
+    transition: background-color 0.15s,
+                color 0.15s      ;
+    cursor: pointer;
+}
+
+.learn:hover{
+    background-color: white;
+    color: black;
+}
+
+.subs{
+    width: 45%;
+    height: 40px;
+    font-size: 1.1vw;
+    background-color: white;
+    border: none;
+    font-weight: 550;
+    cursor: pointer;
+
 }
